--- a/style.css
+++ b/style.css
@@ -1,133 +1,52 @@
-*{
-    /* border: 1px solid green; */
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-body{
-    background-color: #FFF8F2;
+body {
+  background-color: #fff8f2;
 }
 
-a:link, a:visited{
-    text-decoration: none;
+main {
+  display: flex;
+  justify-content: center;
 }
 
-#nome{
-    font-family: 'Lavishly Yours', cursive;
-    text-align: center;
-    font-size: 400%;
+a, a:link, a:visited {
+  text-decoration: none;
 }
 
-#description{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    float: left;
-    width: 70%;
-    text-align: justify;
-    margin: 3% 0 0 1%;
+.description {
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  font-weight: 600;
+  gap: 10px;
 }
 
-#fotoperfil{
-    width: 200px;
-    border-radius: 100%;
-    float:right;
-    margin: 0 2%;
-    padding: 5px;
-    background-color: #403E3D;
+.card {
+  align-items: center;
+  background: url("images/background.png");
+  background-size: cover;
+  border-radius: 20px;
+  box-shadow: 0 3px 10px hsl(28, 18%, 36%);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  height: 300px;
+  justify-content: center;
+  margin-top: 200px;
+  top: 50%;
+  width: 600px;
 }
 
-#header{
-    background: url("images/background.png");
-    background-size: cover;
-    height: 340px; 
-}
-
-p .linkcanva{
-    color: #C28717;
-    font-weight: 700;
-}
-
-.letter{
-    color: #254775;
-    font-weight: 700;
-}
-
-#indice{
-    width: 200px;
-    color: #FFF8F2;
-    background-color: #254775;
-    padding: 1% 2%;
-    margin: 1% 0 8%;
-    list-style-position: inside;
-}
-
-ul a{
-    color: #FFF8F2;
-}
-
-.html{
-    font-family: 'Cutive Mono', monospace;
-    font-size: 20px;
-}
-
-.css{
-    font-style: italic;
-    font-size: 30px;
-}
-
-.ingles{
-    font-weight: 900;
-    font-family: 'Pacifico', cursive;
-    font-size: 28px;
-}
-
-.text ul li:nth-child(odd){
-    color: #01E1FF;
-}
-
-.block{
-    padding: 50px 0 0 100px;
-    width: 300px;
-    height: 200px;
-    margin-left: 10%;
-    background: #36515A;
-    background-size: 20px;
-    border-radius: 80% 0 70% 0;
-}
-
-#habilit{
-    font-size: 50px;
-    color: #FFF8F2;
-}
-
-.text{
-    text-align: left;
-    list-style-position: inside;
-    padding-top: 2%;
-    color: #F9F9F9;
-}
-
-.endblock{
-    margin-top: 8%;
-    background-color: #254775;
-    padding: 10px;
-    color: #FFF8F2;
-}
-
-.endpart{
-    margin: 20px;
-}
-
-.icon{
-    background-color: #FFF8F2;
-    border-radius: 10px;
-    padding: 10px;
-    width: 120px;
-    margin-top: 2%;
-
+.links-icon {
+  align-items: center;
+  display: flex;
+  gap: 20px;
 }
 
 #github, #linkedin{
-    width: 30px;
-    margin: 0 10%;
+  width: 40px;
+  margin: 0 10%;
 }
